@startuml
abstract class pt.isel.deetc.g10.sqlmapper.sqlExecutor.AbstractSqlExecutor
class pt.isel.deetc.g10.sqlmapper.Binder.Binder
class pt.isel.deetc.g10.sqlmapper.Binder.SqlConverter
class pt.isel.deetc.g10.sqlmapper.fw.SqlIterable
class pt.isel.deetc.g10.sqlmapper.sqlExecutor.SqlMultiExecutor
class pt.isel.deetc.g10.sqlmapper.sqlExecutor.SqlSingleExecutor
interface pt.isel.deetc.g10.sqlmapper.sqlExecutor.ISqlExecutor
pt.isel.deetc.g10.sqlmapper.sqlExecutor.AbstractSqlExecutor ..> pt.isel.deetc.g10.sqlmapper.Binder.Binder
pt.isel.deetc.g10.sqlmapper.sqlExecutor.AbstractSqlExecutor ..> pt.isel.deetc.g10.sqlmapper.Binder.SqlConverter
pt.isel.deetc.g10.sqlmapper.sqlExecutor.AbstractSqlExecutor ..> pt.isel.deetc.g10.sqlmapper.fw.SqlIterable
pt.isel.deetc.g10.sqlmapper.sqlExecutor.AbstractSqlExecutor --|> pt.isel.deetc.g10.sqlmapper.sqlExecutor.ISqlExecutor
pt.isel.deetc.g10.sqlmapper.sqlExecutor.SqlMultiExecutor --|> pt.isel.deetc.g10.sqlmapper.sqlExecutor.AbstractSqlExecutor
pt.isel.deetc.g10.sqlmapper.sqlExecutor.SqlMultiExecutor ..> pt.isel.deetc.g10.sqlmapper.Binder.Binder
pt.isel.deetc.g10.sqlmapper.sqlExecutor.SqlSingleExecutor --|> pt.isel.deetc.g10.sqlmapper.sqlExecutor.AbstractSqlExecutor
pt.isel.deetc.g10.sqlmapper.sqlExecutor.SqlSingleExecutor ..> pt.isel.deetc.g10.sqlmapper.Binder.Binder
@enduml